Avoid log spam in AudioSyncReader.

When the remote socket has been closed, Send will always fail, leading
to frequent logging. This change limits the logging to a maximum of one
log call for the lifetime of the AudioSyncReader. One log should be
enough, since the likely cause of the failure is that the remote socket
is closed (and this condition cannot be fixed). The log call is also
updated to display OS error information.

Also includes corresponding changes in AudioInputSyncWriter.

BUG=711400

Review-Url: https://codereview.chromium.org/2822123002
Cr-Commit-Position: refs/heads/master@{#465578}

Former-commit-id: f38129c81c161fdd52874bf178b9110427a8c2ed